Started remodeling CLIMatch graphics, started MatchStartPage